export default class ObjectGridCellMeta {
    public constructor(
        public readonly prev: any,
        public readonly templates: Map<string, any>,
    ) {
    }
}
